--- a/index.html
+++ b/index.html
@@ -36,5 +36,29 @@
 	<script type="text/javascript" src="cmp/mi-cabeza.js"></script>
 	<script type="text/javascript" src="cmp/mi-nav.js"></script>
 	<script type="text/javascript" src="cmp/mi-footer.js"></script>
-	<script type="text/javascript" src="js/ctrlSesion.js"></script>
+	<script type="text/javascript">
+		const auth = firebase.auth();
+		const provider = new firebase.auth.GoogleAuthProvider();
+		provider.setCustomParameters({ prompt: "select_account" });
+		auth().onAuthStateChanged(
+			usuario => {
+				if(usuario && usuario.email){
+					nombre.value = usuario.displayName;
+				}
+				else{
+					auth.signInWithRedict(provider);
+				}
+			},
+			procesaError
+			);
+
+		async function terminarSesion(){
+			try{
+				await auth.signOut();
+			}
+			catch (e){
+				procesaError(e);
+			}
+		}
+	</script>
 </html>
