--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<script type="text/javascript" src="cmp/mi-cabeza.js"></script>
 	<script type="text/javascript" src="cmp/mi-nav.js"></script>
 	<script type="text/javascript" src="cmp/mi-footer.js"></script>
-	<script type="text/javascript">
+	<script>
 		const auth = firebase.auth();
 		const provider = new firebase.auth.GoogleAuthProvider();
 		provider.setCustomParameters({ prompt: "select_account" });
