--- a/index.html
+++ b/index.html
@@ -37,5 +37,5 @@
 	<script type="text/javascript" src="cmp/mi-cabeza.js"></script>
 	<script type="text/javascript" src="cmp/mi-nav.js"></script>
 	<script type="text/javascript" src="cmp/mi-footer.js"></script>
-	<script type="text/javascript" src="js/ctrlSesion.js"></script>
+	<script type="module" src="js/ctrlSesion.js"></script>
 </html>
