--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	 	<form style="display: inline-block;" name="forma">
 	 		<label class="user">User</label>
 	 		<output name="nombre"></output>
-			<button type="submit" name="terminarSesion">Cerrar Sesión</button>
+			<button type="button" name="terminarSesion">Cerrar Sesión</button>
 	 	</form>
 	 </div>
 	 <section class="margen"> 
