--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	 	<h1 id="bienvenida">Bienvenido</h1>
 	 	<form style="display: inline-block;" name="forma">
 	 		<label class="user">User</label>
-	 		<output name="nombre">Cargando usuario...</output>
+	 		<output name="nombre" class="user">:Cargando usuario...</output>
 			<button type="button" name="terminarSesión">Cerrar Sesión</button>
 	 	</form>
 	 </div>
