--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	 <div class="margen">
 	 	<h1 id="bienvenida">Bienvenido</h1>
 	 	<form style="display: inline-block;" name="forma">
-	 		<label class="user">User</label>
+	 		<label class="user">Usuario: </label>
 	 		<output name="nombre" class="user">:Cargando usuario...</output>
 			<button type="button" name="terminarSesión">Cerrar Sesión</button>
 	 	</form>
