--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"> </script>
 	<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"> </script>
 	<script type="text/javascript" src="cmp/mi-cabeza.js"></script>
-	<script type="text/javascript" src="cmp/mi-nav.js"></script>
+	<script type="module" src="cmp/mi-nav.js"></script>
 	<script type="text/javascript" src="cmp/mi-footer.js"></script>
 	<script src="js/init.js"></script>
 </head>
