--- a/menu.html
+++ b/menu.html
@@ -14,5 +14,5 @@
 </body>
 	<script type="text/javascript" src="cmp/mi-cabeza.js"></script>
 	<script type="text/javascript" src="cmp/mi-nav.js"></script>
-	<script type="text/javascript" src="cmp/mi-footer.js"></script>
+	<script type="module" src="cmp/mi-footer.js"></script>
 </html>
