--- a/admin.html
+++ b/admin.html
@@ -12,6 +12,6 @@
 <mi-footer></mi-footer>
 </body>
 	<script type="text/javascript" src="cmp/mi-cabeza.js"></script>
-	<script type="text/javascript" src="cmp/mi-nav.js"></script>
+	<script type="module" src="cmp/mi-nav.js"></script>
 	<script type="text/javascript" src="cmp/mi-footer.js"></script>
 </html>
