--- a/carrito.html
+++ b/carrito.html
@@ -5,6 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Carrito</title>
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+	<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"> </script>
+	<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"> </script>
+	<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"> </script>
+	<script src="js/init.js"></script>
 </head>
 <body>
 <mi-cabeza></mi-cabeza>
