--- a/menu.html
+++ b/menu.html
@@ -5,18 +5,25 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Menú</title>
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
-	<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"> </script>
-	<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"> </script>
-	<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"> </script>
+	<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
 	<script src="js/init.js"></script>
 </head>
 <body>
 <mi-cabeza></mi-cabeza>
 <mi-nav></mi-nav>
-
+<header class="margen">
+	<h1>Platillos</h1>
+	<div class="modMenu">
+		<a href="platillos.html">Modificar menú</a>
+	</div>
+</header>
 <mi-footer></mi-footer>
 </body>
 	<script type="text/javascript" src="cmp/mi-cabeza.js"></script>
 	<script type="module" src="cmp/mi-nav.js"></script>
+
 	<script type="text/javascript" src="cmp/mi-footer.js"></script>
 </html>
