--- a/admin.html
+++ b/admin.html
@@ -8,15 +8,21 @@
 	<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"> </script>
 	<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"> </script>
 	<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"> </script>
+	<script type="text/javascript" src="cmp/mi-cabeza.js"></script>
+	<script type="text/javascript" src="cmp/mi-nav.js"></script>
+	<script type="text/javascript" src="cmp/mi-footer.js"></script>
 	<script src="js/init.js"></script>
 </head>
 <body>
 <mi-cabeza></mi-cabeza>
-<mi-nav></mi-nav>	
+<header class="margen">
+	<h1 >Platillos</h1>
+	<a href="platilloNuevo.html" class="modMenu">Agregar platillo</a>
+</header>
 
 <mi-footer></mi-footer>
 </body>
 	<script type="text/javascript" src="cmp/mi-cabeza.js"></script>
-	<script type="module" src="cmp/mi-nav.js"></script>
+	<script type="text/javascript" src="cmp/mi-nav.js"></script>
 	<script type="text/javascript" src="cmp/mi-footer.js"></script>
 </html>
