--- a/admin.html
+++ b/admin.html
@@ -15,6 +15,7 @@
 </head>
 <body>
 <mi-cabeza></mi-cabeza>
+<mi-nav></mi-nav>
 <header class="margen">
 	<h1 >Platillos</h1>
 	<a href="platilloNuevo.html" class="modMenu">Agregar platillo</a>
