--- a/platilloNuevo.html
+++ b/platilloNuevo.html
@@ -9,10 +9,7 @@
 	<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
   	<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
   	<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-    <script src="js/init.js"></script>
-    <script type="text/javascript" src="cmp/mi-cabeza.js"></script>
-	<script type="text/javascript" src="cmp/mi-nav.js"></script>
-	<script type="text/javascript" src="cmp/mi-footer.js"></script>
+    	<script src="js/init.js"></script>
 </head>
 <body>
 	<mi-cabeza></mi-cabeza>
@@ -58,5 +55,8 @@
 	</form>
 	<mi-footer></mi-footer>	
 </body>
-
+	<script type="module" src="js/ctrlPlatillos.js"></script>
+	<script type="text/javascript" src="cmp/mi-cabeza.js"></script>
+	<script type="module" src="cmp/mi-nav.js"></script>
+	<script type="text/javascript" src="cmp/mi-footer.js"></script>
 </html>
