--- a/admin.html
+++ b/admin.html
@@ -17,9 +17,12 @@
 	<h1 >Platillos</h1>
 	<a href="platilloNuevo.html" class="modMenu">Agregar platillo</a>
 </header>
-
+<ul class="margen lista" id="lista">
+	
+</ul>
 <mi-footer></mi-footer>
 </body>
+	<script type="module" src="js/ctrlAdmin.js"></script>
 	<script type="text/javascript" src="cmp/mi-cabeza.js"></script>
 	<script type="module" src="cmp/mi-nav.js"></script>
 	<script type="text/javascript" src="cmp/mi-footer.js"></script>
