--- a/editPlatillo.html
+++ b/editPlatillo.html
@@ -42,6 +42,7 @@
 	<mi-footer></mi-footer>	
 
 </body>
+	<script type="module" src="js/ctrlEdit.js"></script>
 	<script type="text/javascript" src="cmp/mi-cabeza.js"></script>
 	<script type="module" src="cmp/mi-nav.js"></script>
 	<script type="text/javascript" src="cmp/mi-footer.js"></script>
