--- a/editPlatillo.html
+++ b/editPlatillo.html
@@ -25,20 +25,20 @@
 		</header>
 		<figure id="figure">
 			<p>
-				<label>Id<input type="text" name="idPlatillo" disabled=""></label>
+				<label>Id<br><input type="text" name="idPlatillo" disabled=""></label>
 			</p>
 			<img src="" alt="Falta la imagen.">
 			<p>
-				<label>Imagen<input type="file" name="imagen" accept=".png, .jpg, .jpeg"></label>
+				<label>Imagen<br><input type="file" name="imagen" accept=".png, .jpg, .jpeg"></label>
 			</p>
 			<p>
-				<label>Nombre<input type="text" name="nombre" required=""></label>
+				<label>Nombre<br><input type="text" name="nombre" required=""></label>
 			</p>
 			<p>
-				<label>Precio<input type="number" name="precio" required=""></label>
+				<label>Precio<br><input type="number" name="precio" required=""></label>
 			</p>
 			<p>
-				<label>Descripción<input type="text" name="desc" required=""></label>
+				<label>Descripción<br><input type="text" name="desc" required=""></label>
 			</p>
 		</figure>		
 	</form>
