--- a/editPlatillo.html
+++ b/editPlatillo.html
@@ -12,8 +12,9 @@
     <script src="js/init.js"></script>
 </head>
 <body>
-	<mi-nav></mi-nav>
+	<mi-cabeza></mi-cabeza>
 	<form name="forma" class="margen">
+		<mi-nav></mi-nav>
 		<header>
 			<h1><output name="id">Id del platillo</output></h1>
 			<div class="herramientas">
