--- a/editPlatillo.html
+++ b/editPlatillo.html
@@ -28,7 +28,7 @@
 			</p>
 			<img src="" alt="Falta la imagen.">
 			<p>
-				<label>Imagen<br><input type="file" name="imagen" accept=".png, .jpg, .jpeg"></label>
+				<label>Imagen<br><input type="file" name="imagen" accept=".png, .jpg, .jpeg" class="marco"></label>
 			</p>
 			<p>
 				<label>Nombre<br><input type="text" name="nombre" required=""></label>
