--- a/editPlatillo.html
+++ b/editPlatillo.html
@@ -26,9 +26,9 @@
 			<p>
 				<label>Id<br><input type="text" name="idPlatillo" disabled=""></label>
 			</p>
-			<img src="" alt="Falta la imagen.">
+			<img src="" alt="Falta la imagen." class="marco">
 			<p>
-				<label>Imagen<br><input type="file" name="imagen" accept=".png, .jpg, .jpeg" class="marco"></label>
+				<label>Imagen<br><input type="file" name="imagen" accept=".png, .jpg, .jpeg"></label>
 			</p>
 			<p>
 				<label>Nombre<br><input type="text" name="nombre" required=""></label>
