--- a/editPlatillo.html
+++ b/editPlatillo.html
@@ -26,7 +26,7 @@
 			<p>
 				<label>Id<br><input type="text" name="idPlatillo" disabled=""></label>
 			</p>
-			<img src="" alt="Falta la imagen." class="marco">
+			<img src="" alt="Falta la imagen." class="imgEdit">
 			<p>
 				<label>Imagen<br><input type="file" name="imagen" accept=".png, .jpg, .jpeg"></label>
 			</p>
