--- a/editPlatillo.html
+++ b/editPlatillo.html
@@ -15,7 +15,7 @@
 	<form name="forma" class="margen">
 		<mi-nav></mi-nav>
 		<header>
-			<h1><output name="id">Id del platillo</output></h1>
+			<h1><output name="id">Modificar platillo</output></h1>
 			<div class="herramientas">
 				<button>Guardar</button>
 				<button name="eliminar" type="button">Eliminar</button>
