--- a/menu.html
+++ b/menu.html
@@ -16,14 +16,14 @@
 <mi-nav></mi-nav>
 <header class="margen">
 	<h1>Platillos</h1>
-	<div class="modMenu">
-		<a href="platillos.html">Modificar menú</a>
-	</div>
+	<ul class="margen lista" id="lista">
+  
+  	</ul>
 </header>
 <mi-footer></mi-footer>
 </body>
 	<script type="text/javascript" src="cmp/mi-cabeza.js"></script>
 	<script type="module" src="cmp/mi-nav.js"></script>
-
+	<script type="module" src="js/ctrl/ctrlMenu.js"></script>
 	<script type="text/javascript" src="cmp/mi-footer.js"></script>
 </html>
