--- a/menu.html
+++ b/menu.html
@@ -24,6 +24,6 @@
 </body>
 	<script type="text/javascript" src="cmp/mi-cabeza.js"></script>
 	<script type="module" src="cmp/mi-nav.js"></script>
-	<script type="module" src="js/ctrl/ctrlMenu.js"></script>
+	<script type="module" src="js/ctrlMenu.js"></script>
 	<script type="text/javascript" src="cmp/mi-footer.js"></script>
 </html>
