--- a/carrito.html
+++ b/carrito.html
@@ -5,19 +5,19 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Carrito</title>
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
-	<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"> </script>
-	<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"> </script>
-	<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"> </script>
-	<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-	<script src="js/init.js"></script>
 </head>
 <body>
 <mi-cabeza></mi-cabeza>
 <mi-nav></mi-nav>
-
+<div class="margen">
+	<form name="forma">
+	<output name="pago"><textarea>Aqui estarán los pedidos...</textarea></output>		
+	</form>
+</div>
 <mi-footer></mi-footer>
 </body>
-	<script type="module" src="cmp/mi-cabeza.js"></script>
-	<script type="module" src="cmp/mi-nav.js"></script>
-	<script type="module" src="cmp/mi-footer.js"></script>
+<script type="module" src="js/ctrlCarrito.js"></script>
+	<script type="text/javascript" src="cmp/mi-cabeza.js"></script>
+	<script type="text/javascript" src="cmp/mi-nav.js"></script>
+	<script type="text/javascript" src="cmp/mi-footer.js"></script>
 </html>
