--- a/carrito.html
+++ b/carrito.html
@@ -11,7 +11,7 @@
 <mi-nav></mi-nav>
 <div class="margen">
 	<form name="forma">
-	<output name="pago"><textarea>Aqui estarán los pedidos...</textarea></output>		
+	<output ><textarea name="pago">Aqui estarán los pedidos...</textarea></output>		
 	</form>
 </div>
 <mi-footer></mi-footer>
