--- a/carrito.html
+++ b/carrito.html
@@ -22,6 +22,6 @@
 </body>
 <script type="module" src="js/ctrlCarrito.js"></script>
 	<script type="text/javascript" src="cmp/mi-cabeza.js"></script>
-	<script type="text/javascript" src="cmp/mi-nav.js"></script>
+	<script type="module" src="cmp/mi-nav.js"></script>
 	<script type="text/javascript" src="cmp/mi-footer.js"></script>
 </html>
