--- a/carrito.html
+++ b/carrito.html
@@ -15,7 +15,9 @@
 <mi-nav></mi-nav>
 <div class="margen">
 	<form name="forma">
-	<output ><textarea name="pago">Aqui estarán los pedidos...</textarea></output>		
+	<output ><textarea name="pago">Aqui estarán los pedidos...</textarea></output>	
+	<button type="submit">Pagar</button>
+	<a href="menu.html"><button type="submit">Cancelar</button></a>
 	</form>
 </div>
 <mi-footer></mi-footer>
