--- a/carrito.html
+++ b/carrito.html
@@ -17,7 +17,7 @@
 	<form name="forma">
 	<output ><textarea name="pago">Aqui estarán los pedidos...</textarea></output>	
 	<button type="submit">Pagar</button>
-	<a href="menu.html"><button type="submit">Cancelar</button></a>
+	<a href="menu.html">Cancelar</a>
 	</form>
 </div>
 <mi-footer></mi-footer>
